--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"react": "18.2.0",
 		"react-day-picker": "^8.8.0",
 		"react-dom": "18.2.0",
+		"react-google-recaptcha-v3": "^1.10.1",
 		"react-hook-form": "^7.45.1",
 		"tailwind-merge": "^1.13.2",
 		"tailwindcss": "3.3.3",
