--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.7.15",
 		"@hookform/resolvers": "^3.1.1",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-alert-dialog": "^1.0.4",
@@ -47,6 +48,7 @@
 		"date-fns": "^2.30.0",
 		"eslint": "8.44.0",
 		"eslint-config-next": "13.4.9",
+		"framer-motion": "^10.12.21",
 		"lucide-react": "^0.260.0",
 		"next": "13.4.9",
 		"postcss": "8.4.26",
