--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@radix-ui/react-toast": "^1.1.4",
 		"@radix-ui/react-toggle": "^1.0.3",
 		"@radix-ui/react-tooltip": "^1.0.6",
+		"@sendgrid/mail": "^8.1.4",
 		"@types/node": "20.4.2",
 		"@types/react": "18.2.15",
 		"@types/react-dom": "18.2.7",
